Fixed overflow Issue.

--- a/src/frontend/Styles/FeedPage.scss
+++ b/src/frontend/Styles/FeedPage.scss
@@ -67,9 +67,9 @@ input[type='submit'] {
   justify-content: center;
   flex-wrap: wrap;
   padding-inline: 20px;
+  padding-bottom: 30px;
   background-color: #222222;
-  overflow: auto !important;
-  max-height: 800px;
+
 }
 .emanWidth {
   width: fit-content;
@@ -93,9 +93,10 @@ input[type='submit'] {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 100%;
+  height: 90vh;
   overflow: hidden;
   flex-grow: 1;
+  padding-bottom: 20px;
 
   .global {
   
