--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -54,3 +54,7 @@ html,body {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   background-color: rgb(84, 165, 165);
 }
+
+html {
+  overflow-x: hidden;
+}
